--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Hello!</h1>
+James S. Graydon
+=====
+
+## About me
+I am a scientist in rare-disease pharma and a Master's student at Columbia. 
+
+## Experience
+* **Alexion, AstraZeneca Rare Disease Unit** *2018 – present*
+* **Syntimmune, Inc.** *2017 – 2018*
+* **Genomas, Inc.** *2015 – 2017*
+
+## Expertise
+* R-based data analysis
+..* tidyverse
+..* Clinical data analysis
+..* Data visualization
+..* R Markdown 
