--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 <body>
     <h1>James S. Graydon</h1>
+    ![Hello, world!](https://github.com/jsgraydon/jsgraydon/blob/astronaut_waving_at_earth.jpg?raw=true)
     
     <h2>About Me</h2>
     <p>I am a scientist in rare-disease pharma and a Master's student at Columbia.</p>
