--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 
-HTML
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Portfolio</title>
+  <title>jsgraydon - Pages</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
     /* General Styles */
@@ -93,8 +91,8 @@ HTML
 <body>
   <!-- Header Section -->
   <header>
-    <h1>Your Name</h1>
-    <p>Software Developer | Open Source Contributor | Tech Enthusiast</p>
+    <h1>James S. Graydon</h1>
+    <p>Data Scientist & Clinical Pharmacology Specialist</p>
     <nav>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
@@ -107,20 +105,19 @@ HTML
   <section id="about">
     <h2>About Me</h2>
     <p>
-      Hello! I'm a passionate software developer with experience in building web applications, contributing to open source, and solving complex problems. I love learning new technologies and collaborating on exciting projects.
+      Hello! I am a clinical data scientist with 10 years of experience in the biotech and pharma industries. I specialize in leveraging deep biological insights and data-backed visualizations to drive preclinical and clinical strategy.
     </p>
-    <a href="https://github.com/yourusername" class="btn">View My GitHub</a>
+    <a href="https://github.com/jsgraydon" class="btn">View My GitHub</a>
   </section>
 
   <!-- Skills Section -->
   <section id="skills" class="skills">
     <h2>Skills</h2>
     <ul>
-      <li>JavaScript (React, Node.js)</li>
-      <li>Python (Django, Flask)</li>
-      <li>HTML & CSS (Responsive Design, Bootstrap)</li>
+      <li>R (tidyverse, R Markdown/Quarto)</li>
+      <li>Python (machine learning)</li>
+      <li>NONMEM (population PK analysis)</li>
       <li>Version Control (Git, GitHub)</li>
-      <li>Database Management (MySQL, MongoDB)</li>
     </ul>
   </section>
 
@@ -129,13 +126,7 @@ HTML
     <h2>Projects</h2>
     <ul>
       <li>
-        <strong>Project 1:</strong> <a href="https://github.com/yourusername/project1" target="_blank">Awesome Web App</a> - A responsive web app built with React and Node.js.
-      </li>
-      <li>
-        <strong>Project 2:</strong> <a href="https://github.com/yourusername/project2" target="_blank">Data Analysis Tool</a> - A Python-based tool for analyzing and visualizing data.
-      </li>
-      <li>
-        <strong>Project 3:</strong> <a href="https://github.com/yourusername/project3" target="_blank">Portfolio Website</a> - My personal portfolio built with HTML, CSS, and JavaScript.
+        <strong>Project 1:</strong> <a href="https://github.com/jsgraydon/PyNCA" target="_blank">PyNCA</a> - A Pyth-based tool for noncompartmental analysis.
       </li>
     </ul>
   </section>
@@ -144,14 +135,14 @@ HTML
   <section id="contact">
     <h2>Contact</h2>
     <p>Feel free to reach out to me for collaborations or just to say hi!</p>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+    <p>Email: <a href="mailto:vivid_frost+github@proton.me">vivid_frost+github@proton.me</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/jsgraydon" target="_blank">linkedin.com/in/jsgraydon</a></p>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Your Name. Built with ❤️ and GitHub Pages.</p>
-    <p><a href="https://github.com/yourusername">GitHub Profile</a></p>
+    <p>&copy; 2025 James S. Graydon. Built with ❤️ and GitHub Pages (and with help from ChatGPT).</p>
+    <p><a href="https://github.com/jsgraydon">GitHub Profile</a></p>
   </footer>
 </body>
 </html>
