--- a/index.html
+++ b/index.html
@@ -15,11 +15,29 @@
       line-height: 1.6;
       color: #333;
     }
+    /* Header with Banner */
     header {
-      background: #0078D7; /* Professional blue */
+      position: relative;
+      background: url('https://jsgraydon.github.io/blob/main/banner.jpg') no-repeat center center/cover; 
+      height: 300px; /* Adjust height as needed */
       color: #fff;
-      padding: 2rem 1rem;
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    /* Overlay for better text readability */
+    header::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+      z-index: 1;
     }
     header h1 {
       margin: 0;
