--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     /* Header with Banner */
     header {
       position: relative;
-      background: url('https://jsgraydon.github.io/blob/main/banner.jpg') no-repeat center center/cover; 
+      background: url('banner.jpg') no-repeat center center/cover; 
       height: 300px; /* Adjust height as needed */
       color: #fff;
       text-align: center;
